--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -7,7 +7,8 @@
     "test": "jest --verbose",
     "test:watch": "npm test -- --watch",
     "lint": "./node_modules/.bin/eslint ./src/**/*.js",
-    "dev": "./node_modules/.bin/babel-node server",
+    "dev": "webpack-dev-server  --inline --hot --content-base dist/ --history-api-fallback",
+    "prod": "NODE_ENV=production node server.js",
     "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
     "deploy": "npm run build && pm2 start server.json"
   },
@@ -20,17 +21,18 @@
   "author": "haochuan",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.6.2",
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
     "express-http-proxy": "^0.7.4",
     "lodash": "^4.14.1",
     "morgan": "^1.7.0",
     "normalizr": "^2.2.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "helmet": "^3.4.0"
   },
   "devDependencies": {
     "antd": "^2.8.0",
-    "autoprefixer": "^6.3.7",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
     "babel-eslint": "^6.1.2",
@@ -53,17 +55,11 @@
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "helmet": "^3.4.0",
     "html-webpack-plugin": "^2.22.0",
-    "ignore-styles": "^4.0.0",
     "jest": "^16.0.0",
-    "jscs": "^3.0.7",
     "jsdom": "^9.4.2",
-    "json-loader": "^0.5.4",
     "node-sass": "^3.8.0",
     "postcss-loader": "^0.9.1",
-    "precss": "^1.4.0",
     "react": "^15.3.0",
     "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
@@ -77,8 +73,7 @@
     "sass-loader": "^4.0.0",
     "stats-webpack-plugin": "^0.4.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
