--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -7,7 +7,7 @@
     "test": "jest --verbose",
     "test:watch": "npm test -- --watch",
     "lint": "./node_modules/.bin/eslint ./src/**/*.js",
-    "dev": "webpack-dev-server  --inline --hot --content-base dist/ --history-api-fallback",
+    "dev": "NODE_ENV=dev nodemon ./server.js --exec babel-node --presets es2015,stage-2",
     "prod": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors && NODE_ENV=production node server.js",
     "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
     "deploy": "npm run build && pm2 start server.json"
@@ -46,6 +46,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
+    "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "enzyme": "^2.4.1",
@@ -73,6 +74,7 @@
     "stats-webpack-plugin": "^0.4.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
