--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -7,7 +7,7 @@
     "test": "jest --verbose",
     "test:watch": "npm test -- --watch",
     "lint": "./node_modules/.bin/eslint ./src/**/*.js",
-    "dev": "NODE_ENV=dev nodemon ./server.js --exec babel-node --presets es2015,stage-2",
+    "dev": "NODE_ENV=dev ./node_modules/.bin/babel-node server",
     "prod": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors && NODE_ENV=production node server.js",
     "build": "./node_modules/.bin/rimraf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --profile --colors",
     "deploy": "npm run build && pm2 start server.json"
