--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -22,14 +22,13 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.6.2",
-    "es6-promise": "^3.2.1",
     "express": "^4.14.0",
     "express-http-proxy": "^0.7.4",
     "helmet": "^3.4.0",
+    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.4.0",
     "lodash": "^4.14.1",
     "morgan": "^1.7.0",
-    "normalizr": "^2.2.1",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
