--- a/template/package.json
+++ b/template/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "compression": "^1.7.0",
+    "connect-history-api-fallback": "^1.3.0",
     "express": "^4.15.3",
     "helmet": "^3.6.1",
     "lodash": "^4.17.4",
@@ -52,19 +53,19 @@
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
     "jsdom": "^11.1.0",
+    "postcss-flexbugs-fixes": "^3.0.0",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "react-transform-hmr": "^1.0.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.1",
-    "stats-webpack-plugin": "^0.6.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0",
     "webpack-dev-middleware": "^1.11.0",
